// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobResuts should render correctly with just a title 1`] = `
<JobResult
  details=""
  location=""
  organization=""
  title="some title"
>
  <p
    className="JobResult"
  >
    <span
      className="JobResult__titleLine"
    >
      <Text
        className="JobResult__title"
        context="brand"
        inline={true}
        size="normal"
        title="some title"
      >
        <span
          className="Text Text--context_brand JobResult__title"
          title="some title"
        >
          some title
        </span>
      </Text>
    </span>
  </p>
</JobResult>
`;

exports[`JobResuts should render with all props defined 1`] = `
<JobResult
  details="details about this job"
  location="location"
  organization="Organization"
  title="A job title"
>
  <p
    className="JobResult"
  >
    <span
      className="JobResult__titleLine"
    >
      <Text
        className="JobResult__title"
        context="brand"
        inline={true}
        size="normal"
        title="A job title"
      >
        <span
          className="Text Text--context_brand JobResult__title"
          title="A job title"
        >
          A job title
        </span>
      </Text>
      <Text
        className="JobResult__location"
        context="muted"
        inline={true}
        size="normal"
      >
        <span
          className="Text Text--context_muted JobResult__location"
        >
          location
        </span>
      </Text>
    </span>
    <Text
      className="JobResult__organization"
      context="accent"
      inline={true}
      size="normal"
      title="Organization"
    >
      <span
        className="Text Text--context_accent JobResult__organization"
        title="Organization"
      >
        Organization
      </span>
    </Text>
    <Text
      context="muted"
      inline={true}
      size="normal"
    >
      <span
        className="Text Text--context_muted"
      >
        details about this job
      </span>
    </Text>
  </p>
</JobResult>
`;
